# gtm-agent

./: .env.example  .gitignore  LICENSE  README.md  app.py  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  startup.sh
.github/agents/: PythonDeveloper.agent.md  SolutionEngineer.agent.md  copilot-instructions.md
.github/workflows/: deploy-azure.yml
infra/: main.bicep  main.json  parameters.json
infra/modules/: appservice.bicep  monitoring.bicep
logs_extracted/deployments/: active
logs_extracted/deployments/01d7eba2-3550-4409-aad5-d22600786211/: status.xml
logs_extracted/deployments/19f2f0d9-a4a6-426c-9480-a088860d9917/: status.xml
logs_extracted/deployments/22e4048e-a8a3-4b9c-802b-876a8ad37248/: status.xml
logs_extracted/deployments/40adda55-f3c0-48be-891a-fd2b6968f083/: status.xml
logs_extracted/deployments/520235f8-db1a-4ddf-90f9-9bd4dd0fec46/: status.xml
logs_extracted/deployments/84e2a8e3-c38d-464f-b116-0228789e3bbb/: status.xml
logs_extracted/deployments/8d9832b4-84d1-4575-9928-ace097ce7870/: status.xml
logs_extracted/deployments/c34a0e61-713d-4d18-932e-3fe3745fe4af/: status.xml
logs_extracted/deployments/c4a4551d-bde9-4c4d-9bb6-2bcdbcff426f/: status.xml
logs_extracted/deployments/c5cd5bd4-0155-494b-8b0d-a81348165f33/: status.xml
logs_extracted/deployments/e8158a56-5f8c-45dd-98a3-32a947b1ac92/: status.xml
scripts/: app.py  deploy.ps1  deploy.sh  test_architecture_query.py  test_mcp_connection.py  test_pev_agent.py
src/: __init__.py  config.py
src/agents/: __init__.py  architect.py  base.py  classifier.py  executor.py  ghcp_coding_agent.py  models.py  orchestrator.py  planner.py  researcher.py  solution_engineer.py  verifier.py
src/api/: __init__.py  dependencies.py  main.py  middleware.py
src/api/routes/: __init__.py  agent.py  health.py
src/mcp/: __init__.py  mcp_server.py
src/models/: __init__.py  agent.py  architecture.py  hypothesis.py  knowledge.py  query.py
src/tools/: local_architecture.py  local_research.py
src/utils/: __init__.py  agent_client.py  logging.py
tests/: __init__.py  conftest.py  debug_blob_test.py  run_code_tests.py
tests/contract/: __init__.py  test_api_contracts.py
tests/evaluation/: __init__.py  evaluation.py  evaluation.xml  middleware.py  models.py  scorers.py
tests/evaluation/reports/: .gitkeep  evaluation_report_20260202_093303.md  evaluation_report_20260202_104048.md  (+18 more)
tests/integration/: test_performance_optimization.py  test_scenarios.py
tests/unit/: test_agents.py  test_config_copilot.py  test_models_architecture.py  test_models_hypothesis.py  test_models_knowledge.py  test_orchestrator_fast_path.py  test_parallel_execution.py  test_pev_agents.py  test_planner_step_budget.py  test_query_classifier.py
(+301 files in other folders)
